--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
-    <meta charset='utf-8'/>
+    <meta charset="UTF-8" />
+    <title>Hello React!</title>
+    <script src="node_modules/react/dist/react.min.js"></script>
+    <script src="node_modules/react-dom/dist/react-dom.min.js"></script>
+    <!-- No need for Babel! -->
   </head>
   <body>
-    <div id='content'>
-      <h1>Events</h1>
-      <ul id='events'></ul>
-    </div>
-
-
-
+    <div id="example"></div>
+    <script type="text/babel">
+      ReactDOM.render(
+        <h1>Hello, world!</h1>,
+        document.getElementById('example')
+      );
+    </script>
   </body>
 </html>
